@startuml
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

database core-service: {

entity "Student" as stud {
  *id : uid
  --
  *user_id: uid
  *name : string
  *school_id: uid <<FK>>
  *surname : string
}

entity "Speaker" as speaker {
  *id : uid
  --
  *user_id: uid
  *name : string
  *surname : string
  *country_id : string <<FK>> default(null)
  avatar: string
  video: string
}

entity "School" as school {
  *id : uid <<generated>>
  --
  *name : string
  avatar: string
}


entity "Language" as lang {
  *id : string
  --
  *name : string
}

entity "Country" as country {
  *id : string
  --
  *name : string
}

entity "AdditionalSpeakerLanguage" as speaker_lang {
  *id : number <<generated>>
  --
  *language_id : string <<FK>>
  *speaker_id: uid <<FK>>
}

entity "WorkingTime" as working_time {
  *id : number <<generated>>
  --
  *speaker_id: uid <<FK>>
  *starts_at: timestamp
  *ends_at: timestamp
}

entity "LessonRequest" as lesson_request {
  *id : number <<generated>>
  --
  *speaker_id: uid <<FK>>
  *school_id: uid <<FK>>
  *supposedly_lesson_starts_at: timestamp
  *stage: string
}

entity "Lesson" as lesson {
  *id : number <<generated>>
  --
  chat_id: uid
  *speaker_id: uid <<FK>>
  *school_id: uid <<FK>>
  *lesson_request_id: number <<FK>>
  *starts_at: timestamp
  *stage: string
}

speaker |o--|{ speaker_lang
country |o--|{ speaker
lesson  |o--o| lesson_request
lesson  }|--o| speaker
lesson  }|--o| school
speaker |o--|{ lesson_request
school  |o--|{ lesson_request
school  |o--|{ stud
lang    |o--|{ speaker_lang
speaker |o--|{ working_time
}

database auth-service: {
entity "User" as user {
  *id : uid
  --
  *login : string
  *password: string
}

entity "UserRole" as user_role {
  *id : number <<generated>>
  --
  *user_id : uid
  *role_id: string
}

entity "RolePermission" as role_permission {
  *id : number <<generated>>
  --
  *permission_id : number
  *role_id: string
}

entity "Permission" as permission {
  *id : number <<generated>>
  --
  *name : string
}

entity "Role" as role {
  *id : string
  --
  *name : string
}

 user    |o--|{ user_role
 role    |o--|{ user_role
 role    |o--|{ role_permission
 permission |o--|{ role_permission
}

database chat-service: {
entity "Message" as message {
  *id : number <<generated>>
  --
  *text: text
  *sender_type: string
  *sender_id: uid <<FK>>
  *chat_type: string
  *chat_id: uid <<FK>>
  *sent_at: timestamp
}

entity "User" as chat_user {
  *id : uid
  --
  *name : string
}

entity "Chat" as chat {
  *id : uid <<generated>>
  --
  *lesson_id : number
  *name: string
}

entity "UserChat" as user_chat {
  *id : uid <<generated>>
  --
  *user_id: uid
  *chat_id: uid
  is_owner: boolean default(false)
}


chat_user |o--|{ user_chat
chat  ||--|{ user_chat
message }|--o| chat_user
message }|--o| chat
}
chat ||--|| lesson
user ||--|| stud
user ||--|| speaker
@enduml